--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,5 +8,7 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Login</button>
+    <p>Don't have an account? <a href="{% url 'accounts:signup' %}">Register here</a>.</p>
+    <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
 </form>
 {% endblock %}
